# app_template_imgui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/render/: render.hpp
src/: main.cpp
src/render/: render.cpp
